0.4.0:
        - add support to type hints (PEP 484)
        - issues #46, #69, #93
        - integrate PRs #96

0.3.4 - 2021/03/04:
        - manage async functions
        - add type_stub param
        - add option for stdin/stdout
        - integrate PRs #64, #71, #75, #91, #92
        - issues #51, #63, #87, #88, #90
        - add CI using Travis and Appveyor (#68, #70)

0.3.3 - 2018/07/25:
        - integrate PRs #52, #54, #55, #57, #59, #60
        - issues #58

0.3.2 - 2017/10/17:
        - add new tests
        - update docstrings, add sphinx conf and generated html doc
        - add tests for issues (#10, #15, #19, #30, #32)
        - update setup for Pypi
        - fix issues #11, #16, #26, #32
        - add option to overwrite a file instead of patching (issue #20)

0.3.1 - 2015/05/31:
        - add tests for issues (issue #9 and #11)
        - use entry_points to get a *.exe on windows
        - fix Python3 compatibility (print, xrange)
        - fix help message (google)
        - convert Pyment's docstrings to reST format using Pyment itself!
        - complete docstrings
        - add 'returns' in managed tags
        - fix issue #12

0.3.0 - 2014/10/12:
        - add google docstring management

0.2.1 - 2014/06/28:
        - add option to only convert existing docstrings
        - improve documentation
        - clean a bit the code
        - change readme format from markdown to reStructuredText
        - add option to ignore private methods/functions

0.2.0 - 2014/04/02:
        - enhance customization allowing to use a configuration file
        - improve the documentation

0.1.0 - 2014/03/30:
        - add numpydoc management
        - make more configurable (first line, __init__ docstring to class,..)
        - fix some bugs